# canvas-lms-sync

./: .gitignore  Cargo.toml  README.md  canvas-sync.example.yml
src/: defer.rs  download.rs  lib.rs  path.rs  sync.rs
src/canvas_api/: files.rs  mod.rs  modules.rs
