[package]
name = "canvas-lms-sync"
version = "0.2.0"
edition = "2021"

authors = ["eternal-flame-AD"]
description = "Synchronizes your course files and modules on Canvas LMS to your local machine."
license = "Apache-2.0"
repository = "https://github.com/eternal-flame-AD/canvas-lms-sync"
keywords = ["canvas", "lms", "download"]
categories = ["api-bindings"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.3.11", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
eframe = { version = "0.22.0", optional = true, features = ["persistence"] }
egui_file = { version = "0.9.0", optional = true }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
once_cell = "1.18.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
serde_yaml = "0.9.22"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"

[[bin]]
name = "canvas-sync"
path = "src/bin/canvas-sync/main.rs"

[[bin]]
name = "canvas-sync-gui"
path = "src/bin/canvas-sync-gui/main.rs"
required-features = ["gui"]

[features]
gui = ["dep:eframe", "dep:egui_file"]

[profile.release]
lto = true
